# boldRetriever

./: LICENSE  README.md  bold-retriever.cabal  boldRetriever.cabal
src/: FileControlRecord.hs  FindColumnLengths.hs  Lib.hs  PageAllocationTable.hs  Parse.hs  ParserBaseLib.hs  Parsers.hs  Record.hs  RunLengthEncodedBlock.hs  StartOfRecordIndex.hs  UnknownPage.hs  VariableDataPage.hs  View.hs
test/: LibSpec.hs
